Update custom.css - prevent text/icon overlap

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -225,6 +225,9 @@ strong, b {
   flex: 1 1 150px;
   max-width: 200px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .icon-toggle {
@@ -250,6 +253,8 @@ strong, b {
 .icon-toggle:hover img {
   transform: scale(1.1);
 }
+
+
 
 .icon-dropdown {
   opacity: 0;
